# tarmo-feedback-bot

./: .env_example  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
data/replies/: help.md  start.md
docker/: Dockerfile
feedback_bot/: bot.py  command_replies.py  config.py  log.py  main.py  retry.py
iac/: template-nomad.hcl
iac/ci/: build.yaml  deploy-prod.yaml  deploy-test.yaml
tests/: test_bot.py
